welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:5: error: type mismatch;
 found   : String
 required: Int
var decalage: Int= (litMessage():String)
                                ^Array2:24: error: not found: value numcol
		setCouleurBrosse( T((o+numcol) % hauteur))
                                       ^